assets/styles/organisms/_form.scss
form:not(.delete-form, .filter-form, .article-form) {
  background-color: var(--molecule-bg);
  border-radius: 8px;
  box-shadow: 0 2px 4px var(--shadow);
  padding: 14px;
}

.delete-form {
  display: inline-block;
}

.article-form__content {
  margin-bottom: 8rem;
}

.article-form__content + .form-submit {
  position: fixed;
  bottom: 4rem;
  right: 4rem;
}

.filter-categories > div {
  display: flex;
  overflow-x: scroll;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  -webkit-overflow-scrolling: touch;
  scrollbar-width: none;
}

